<resources>
    <string name="app_name">Team8FlipGame</string>
    <string name="score">SCORE</string>
    <string name="download_progress">Downloading 0 of 20 images...</string>
    <string name="credits">Credits</string>
    <string name="members">Bianca Cao Zengyu \nDaryl Kouk Leong Jun \n Martin Ng Hong Yi \n Pwint Theingi Aung Win
\n Wutt Yee Hnin Lwin \n Wu Yirui</string>
    <string name="Licenses">Licenses</string>
    <string name="lincense_detail">Music: Nitendo(Pokemon/Super Mario) \nCat Pictures: Google.com</string>
    <string name="matches">0/6 matches</string>
    <string name="url">https://stocksnap.io/search/cat</string>
    <string name="fetchBtn">Fetch</string>
    <string name="name">Name</string>
    <string name="credit">Credit</string>
    <string name="selected_images">0 out of 6 images selected</string>
    <string name="easy_mode">Easy</string>
    <string name="normal_mode">Normal</string>
    <string name="hard_mode">Hard</string>
    <string name="well_play">Well play!</string>
    <string name="dia_Score">Score:</string>
    <string name="ok">OK</string>
    <string name="dia_points">20 points</string>
    <string name="play">play</string>
    <string name="leader_board">leaderboard</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="bug_found">Found a bug ?</string>

</resources>