<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LeaderBoardActivity">

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/scoreTxt"/>

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/score"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/difficultyTxt"
        app:layout_constraintLeft_toRightOf="@id/nameTxt" />

    <TextView
        android:id="@+id/difficultyTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/difficulty"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/scoreTxt"/>
</androidx.constraintlayout.widget.ConstraintLayout>