<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top">
    //tools:context=".HomeActivity"

    <ImageButton
        android:id="@+id/soundToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:src="@android:drawable/ic_media_play"
        android:background="@color/red"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/home_animation"
        android:layout_gravity="center_vertical|center_horizontal"
        />
    <Button
        android:id="@+id/play"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/play" />

    <Button
        android:id="@+id/leaderBoard"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/leader_board"/>

    <Button
        android:id="@+id/credits"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|bottom"
        android:text="@string/credits" />

</LinearLayout>