<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/home_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    //mute toggle
    <com.wajahatkarim3.easyflipview.EasyFlipView
        android:id="@+id/flipToggle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top|right"
        app:autoFlipBack="false"
        app:flipDuration="400"
        app:flipEnabled="true"
        app:flipFrom="right"
        app:flipOnTouch="false"
        app:flipType="horizontal">

        <!-- Back Layout Goes Here music on-->
        <ImageView
            android:id="@+id/soundToggle_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@drawable/speaker"
            android:clickable="false"
            android:scaleType="fitXY" />

        <!-- Front Layout Goes Here music off -->
        <ImageView
            android:id="@+id/soundToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@drawable/mute"
            android:clickable="false"
            android:scaleType="fitXY" />
    </com.wajahatkarim3.easyflipview.EasyFlipView>

    //wontae gif (yes it's called wontae cat)
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cat"
        android:background="@drawable/logo"
        android:layout_gravity="center_vertical|center_horizontal"
        />

    //home made gif
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:id="@+id/app_name_orange"
            android:background="@drawable/app_name_nobg"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:id="@+id/app_name_pink"
            android:background="@drawable/app_name_pink_nobg"
            android:layout_gravity="center"/>
    </LinearLayout>

    //play button
    <Button
        android:id="@+id/play"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/play" />

    //difficulty radio
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/difficultyRD">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/easy_modeRD"
            android:gravity="right"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/normal_modeRD"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hard_modeRD"
            android:gravity="left"/>
    </RadioGroup>

    //radio button description
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_mode"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_mode"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_mode"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    //leader board button
    <Button
        android:id="@+id/leaderBoard"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/leader_board"/>

    //credits button
    <Button
        android:id="@+id/credits"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center|bottom"
        android:text="@string/credits" />

</LinearLayout>