<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreditsActivity">

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/credits"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_marginTop="40sp"
        android:id="@+id/Team8"
        app:layout_constraintTop_toBottomOf="@id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/team8Members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Team 8 Members"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/memberNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/Team8"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/Members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="44dp"
            android:text="@string/members"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/team8Members"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/songLicense"
        app:layout_constraintTop_toBottomOf="@id/memberNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/memberNames"
            android:text="@string/Licenses"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/licenseDetails"
        app:layout_constraintTop_toBottomOf="@id/songLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/licenseDetails"
            android:text="@string/lincense_detail"
            android:textSize="18sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Bugs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/emailContact"
        android:text="@string/bug_found"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/emailContact"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Contact Us"
        android:textSize="25dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:textColor="@color/blue"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="643dp"
        android:textStyle="italic"/>


</androidx.constraintlayout.widget.ConstraintLayout>